--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
     overflow-x: hidden;
     overflow-y: hidden;
     width: 100%;
-    height: 935px;
+    height: 100vh;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     display: flex;
     align-items: center;
@@ -171,4 +171,26 @@ body {
     opacity: 90%;
     transform: scale(0.97);
     transition: all 0.5s;
+}
+
+@media(max-width: 999px) {
+    .square-principal .square-body {
+        color: white;
+        text-align: center;
+        margin: 23px;
+        margin-top: -380px;
+        position: relative;
+        top: 65px;
+    }
+
+    .header-principal .calc {
+        transition: all 0.3s;
+        position: relative;
+        height: 48px;
+        top: -65px;
+        border-radius: 20px;
+        width: 120px;
+        box-shadow: 2px 5px 15px rgba(255, 255, 255, 0.4);
+        background-color: rgb(0, 0, 0, 0.5);
+    }
 }
