--- a/css/style.css
+++ b/css/style.css
@@ -175,9 +175,6 @@ body {
 
 @media(max-width: 1080px) {
 
-    .square-principal .square {
-        top: 30vh
-    }
     .square-principal .square-body {
         color: white;
         text-align: center;
@@ -187,14 +184,92 @@ body {
         top: 295px;
     }
 
+    .calcimg img{
+        width: 50%;
+        margin-left: 10px;
+        height: 50%;
+        margin-top: 18px;
+    }
+
     .header-principal .calc {
+        right: 50px;
         transition: all 0.3s;
         position: relative;
-        height: 48px;
-        top: -155px;
-        border-radius: 20px;
-        width: 120px;
+        height: 148px;
+        top: -205px;
+        border-radius: 40px;
+        width: 220px;
         box-shadow: 2px 5px 15px rgba(255, 255, 255, 0.4);
         background-color: rgb(0, 0, 0, 0.5);
+    }
+
+    .square-principal .square {
+        transition: all 0.3s;
+        height: 1180px;
+        box-shadow: 2px 5px 15px rgba(255, 255, 255, 0.6);
+        width: 700px;
+        background-color: rgb(255, 255, 255, 0.5);
+        position: absolute;
+        border-radius: 20px;
+        right: 10vh;
+        top: 30vh
+    }
+
+    .social {
+        margin-top: 103px;
+        margin-right: 50px;
+    }
+
+
+    .social ul li {
+        opacity: 100%;
+        padding-left: 50px;
+        align-items: center;
+        justify-content: center;
+        display: inline-block;
+    }
+
+    .social ul li img {
+        transition: all 0.3s;
+        opacity: 90%;
+        width: 90%;
+        height: 90%;
+    }
+
+    .square-social {
+        position: absolute;
+        left: 10px;
+        transition: all 0.3s;
+        top: 950px;
+        height: 120px;
+        box-shadow: 2px 5px 15px rgba(0, 0, 0, 0.6);
+        width: 530px;
+        background-color: rgb(0, 0, 0, 0.7);
+        border-radius: 20px;
+        margin: 0 auto;
+    }
+
+    .square-bio {
+        font-size: 25px;
+        margin-top: 40px;
+        transition: all 0.3s;
+        height: 480px;
+        box-shadow: 2px 5px 15px rgba(0, 0, 0, 0.6);
+        width: 550px;
+        background-color: rgb(0, 0, 0, 0.5);
+        border-radius: 20px;
+    }
+
+    .square-head {
+        margin-left: 95px;
+        transition: all 0.5s;
+        height: 340px;
+        box-shadow: 2px 5px 15px rgba(0, 0, 0, 0.9);
+        width: 340px;
+        background-image: url('../assets/img/lipe.jpg');
+        background-size: cover;
+        background-repeat: no-repeat;
+        border-radius: 50%;
+        margin-top: 620px;
     }
 }
